manifests/alert-manager-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: alertmanager-main
  namespace: openshift-monitoring
spec:
  to:
    kind: Service
    name: alertmanager-main
