manifests/prometheus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus-k8s
  namespace: openshift-monitoring
spec:
  to:
    kind: Service
    name: prometheus-k8s
